# python-grpc-demo

./: README.rst  pyproject.toml
python_grpc_demo/: server.py
python_grpc_demo/client/: client.py
python_grpc_demo/client/interceptors/: authentication_interceptor.py
python_grpc_demo/grpc_types/: greeting_pb2.py  greeting_pb2.pyi  greeting_pb2_grpc.py
python_grpc_demo/protos/: greeting.proto
python_grpc_demo/server/: server.py
python_grpc_demo/server/interceptors/: authentication_interceptor.py
python_grpc_demo/server/servicers/: greeter.py
tests/: test_python_grpc_demo.py
